CSS fix for mobile menu, added z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1426,6 +1426,7 @@ nav.site-nav {
   left: 0;
   bottom: 0;
   width: 220px;
+  z-index: 10;
   background: #32AB64;
   text-align: center;
   font-size: 18px;
